# personal-finance-mcp

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-03-20-personal-finance-mcp-design.md
src/personal_finance_mcp/: __init__.py  __main__.py  config.py  db.py  server.py  teller.py  venmo.py
src/personal_finance_mcp/enroll/: __init__.py  handler.py
src/personal_finance_mcp/enroll/templates/: connect.html
tests/: conftest.py  test_config.py  test_db.py  test_server.py  test_teller.py  test_venmo.py
tests/fixtures/: venmo_edge_cases.csv  venmo_standard.csv
