[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-finance-mcp"
version = "0.1.0"
description = "MCP server for personal finance — connects to bank accounts via Teller and Venmo via CSV"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
